--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>02-Welcome-App</finalName>
+		<finalName>Welcome-App</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
